--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "seivproject2_frontend",
-  "version": "0.0.0",
+  "name": "seivproject2-frontend",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "cross-env APP_ENV=development vite",
+    "build": "cross-env APP_ENV=production vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "bundle": "mv .env dist",
+    "test": "cypress run",
+    "test:open": "cypress open"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "@mdi/font": "^7.0.96",
+    "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.28.0",
+    "eslint-plugin-vue": "^9.7.0",
+    "vite-plugin-vuetify": "^1.0.0",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.0.1",
+    "vuex": "^4.0.2",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^4.3.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "eslint": "^8.46.0",
-    "eslint-plugin-vue": "^9.16.1",
-    "prettier": "^3.0.0",
-    "vite": "^4.4.9"
+    "@mdi/js": "^7.0.96",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "cross-env": "^7.0.3",
+    "cypress": "^12.9.0",
+    "vite": "^4.2.1"
   }
 }
